--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Meu site</title>
+
+    <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script>
+
 </head>
 <body>
     <p>Olá Mundo</p>
-    <p>Cheguei!...</p>
+    <p>Cheguei!...</p><br><br><br><br><br>
 
     <script src="index.js"></script>
+
+    <p>Texto a registar na bd</p>
+    <input type="text" id="texto">
+    <input type="submit" value="Escrever" onclick="PostBd()">
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+
 </body>
 </html>
