--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Meu site</title>
-
+    <title>Document</title>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script>
-
 </head>
+
 <body>
-    <p>Olá Mundo</p>
-    <p>Cheguei!...</p><br><br><br><br><br>
-
-    <script src="index.js"></script>
-
     <p>Texto a registar na bd</p>
     <input type="text" id="texto">
     <input type="submit" value="Escrever" onclick="PostBd()">
 
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-
+    <script src="firebase.js"></script>
+    
 </body>
+
 </html>
