ocultar registo na bd

--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
     </div>
     <!-- Sidebar -->
     <div id="mainpage">
-        <p>Texto a registar na bd</p>
+        <p>Em Contrução....</p>
+        <!-- <p>Texto a registar na bd</p>
         <input type="text" id="texto">
-        <input type="submit" value="Escrever" onclick="PostBd()">
+        <input type="submit" value="Escrever" onclick="PostBd()"> -->
     </div>
 
 
