--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <link rel="icon" type="image/x-icon" href="img/codepen.svg">
     <title>Site</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script>
+    <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <!-- GoogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -72,8 +79,33 @@
         </nav>
     </div>
     <!-- Sidebar -->
+
     <div id="mainpage">
-        <p>Em Contrução....</p>
+
+        <header>
+            <p style="font-weight: 1000;">Header</p>
+        </header>
+
+        <div class="body">
+            <p>Em Contrução....</p><br><br>
+            <b>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem harum in enim dolore odio odit eum
+                maxime
+                illo neque reprehenderit, pariatur architecto magnam dolorum quisquam, ducimus eligendi sint
+                dignissimos.
+                Soluta!</b><br><br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis minus est eveniet ut atque temporibus unde
+            distinctio non consequatur voluptates soluta, quos eius laudantium, consectetur reprehenderit, deserunt quo.
+            Vitae, iusto!
+
+        </div>
+        <div>
+            <footer>
+                <p style="font-weight: 1000;">Footer</p>
+            </footer>
+        </div>
+
+
+
         <!-- <p>Texto a registar na bd</p>
         <input type="text" id="texto">
         <input type="submit" value="Escrever" onclick="PostBd()"> -->
