--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         </header>
 
         <div class="body">
-            <!-- <p>Em Contrução....</p><br><br> -->
             <!-- Routing -->
             <div id="content"></div>
+            
         </div>
 
 
@@ -100,6 +100,8 @@
                 <p style="font-weight: 1000;">Footer</p>
             </footer>
         </div>
+
+        <!-- Firebase -->
 
         <!-- <p>Texto a registar na bd</p>
         <input type="text" id="texto">
