--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
         rel="stylesheet">
-
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -82,6 +83,7 @@
     </div>
     <!-- Sidebar -->
 
+    <!-- Mainpage -->
     <div id="mainpage">
 
         <header>
@@ -89,9 +91,21 @@
         </header>
 
         <div class="body">
+            <!-- <a onclick="InsertMeal()">Insert Meal</a> -->
+
+            <form style="display: flex; flex-direction: column;" id="mls-form">
+                <br><br>
+                <div class="mls-label"><label for="type">Type: </label><input type="text" id="mls-type"></div>
+                <div class="mls-label"><label for="type">Title: </label><input type="text" id="mls-title"></div>
+                <div class="mls-label"><label for="type">Ingredients: </label><input type="text" id="mls-ingredients"></div>
+                <div class="mls-label"><label for="type">Preparation Minutes: </label><input type="text" id="mls-preparationMinutes"></div>
+                <div class="mls-label"><label for="type">Preparation Tips: </label><input type="text" id="mls-preparationTips"></div>
+            </form>
+
+
             <!-- Routing -->
+            <br><br>
             <div id="content"></div>
-            
         </div>
 
 
@@ -112,6 +126,9 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
     <script src="firebase.js"></script>
     <script src="index.js"></script>
     <script src="routing.js"></script>
