--- a/index.html
+++ b/index.html
@@ -36,35 +36,35 @@
 
                     <button class="sidebar-burger" onclick="toggleSidebar(event)">
                         <div class="sidebar-align">
-                            <i class="fa-solid fa-bars fa-lg" id="burg-btn"></i>
-                            <i class="fa-solid fa-xmark fa-lg" id="close-btn"></i>
+                            <i class="fa-solid fa-bars fa-xl" id="burg-btn"></i>
+                            <i class="fa-solid fa-xmark fa-xl" id="close-btn"></i>
                         </div>
                     </button>
 
                     <button type="button" title="Home">
                         <div class="sidebar-align">
-                            <i class="fa-solid fa-house" id="/"></i>
+                            <i class="fa-solid fa-house fa-xl" id="/"></i>
                         </div>
                         <span id="/">Home</span>
                     </button>
 
                     <button type="button" title="Meals">
                         <div class="sidebar-align">
-                            <i class="fa-solid fa-utensils fa-lg" id="/meals"></i>
+                            <i class="fa-solid fa-utensils fa-xl" id="/meals"></i>
                         </div>
                         <span id="/meals">Meals</span>
                     </button>
 
                     <button type="button">
                         <div class="sidebar-align">
-                            <i class="fa-solid fa-calendar-week fa-lg" id="/weakly-meals"></i>
+                            <i class="fa-solid fa-calendar-week fa-xl" id="/weakly-meals"></i>
                         </div>
                         <span id="/weakly-meals">Weakly meals</span>
                     </button>
 
                     <button type="button">
                         <div class="sidebar-align">
-                            <i class="fa-solid fa-basket-shopping fa-lg" id="/grocery-list"></i>
+                            <i class="fa-solid fa-basket-shopping fa-xl" id="/grocery-list"></i>
                         </div>
                         <span id="/grocery-list">Grocery list</span>
 
@@ -72,14 +72,14 @@
 
                     <button type="button">
                         <div class="sidebar-align">
-                            <i class="fa-solid fa-list-check fa-lg" id="/to-do-list"></i>
+                            <i class="fa-solid fa-list-check fa-xl" id="/to-do-list"></i>
                         </div>
                         <span id="/to-do-list">ToDo Lists</span>
                     </button>
 
                     <button type="button">
                         <div class="sidebar-align">
-                            <i class="fa-solid fa-right-from-bracket fa-lg"></i>
+                            <i class="fa-solid fa-right-from-bracket fa-xl"></i>
                         </div>
                         <span>Logout</span>
                     </button>
@@ -99,20 +99,6 @@
 
         <div class="body">
             <!-- <a onclick="InsertMeal()">Insert Meal</a> -->
-
-            <!-- <form style="display: flex; flex-direction: column;" id="mls-form">
-                <div class="mls-inp-box"><label for="type">Type: </label><input type="text" id="mls-type"></div>
-                <div class="mls-inp-box"><label for="type">Title: </label><input type="text" id="mls-title"></div>
-                <div class="mls-inp-box"><label for="type">Ingredients: </label><input type="text" id="mls-ingredients"></div>
-
-                <div class="mls-inp-box"><label for="type">Ingredients: </label><textarea name="" id="" cols="30" rows="10"></textarea>
-                <div class="mls-inp-box"><label for="type">Preparation Minutes: </label><input type="number"
-                        id="mls-preparationMinutes"></div>
-                <div class="mls-inp-box"><label for="type">Preparation Tips: </label><input type="text"
-                        id="mls-preparationTips"></div>
-                <div class="mls-sub-btn"><input type="button" value="Registar"></div>
-
-            </form> -->
 
 
 
